@@ -1,3 +1,8 @@
+Tue Jun 12 14:17:40 CEST 2007
+	Class-SpatialLines.R: removed check that a line needs at least 2 points; 
+	map2SpatialLines (hello.Rnw) would fail.
+	spsample.R: added correct area computation subtracting holes.
+
 Thu Sep  8 16:18:02 CEST 2005
 	contour methods
 	gridlines taken from example in transform/spproj
